feat(auth): Implement refresh token functionality
This commit introduces a comprehensive refresh token mechanism for the authentication service.

Key changes include:
- Added a `refresh_tokens` table to the database, including indexes for `email` and `refresh_tokens_token`.
- Updated the `AuthUseCase` to handle refresh token generation, saving, retrieval, and deletion.
- Modified `jwt.TokenManager` to generate separate access and refresh tokens.
- Implemented a new `/refresh` endpoint in the HTTP handler to allow token refreshing.
- Updated `.env` with a placeholder for the JWT secret and improved the `DATABASE_URL` for local development.
- Adjusted `internal/domain/user.go` to include `TokenPair` struct and removed JSON tags from User fields.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HTTP_PORT=8001
 GRPC_PORT=50001
-DATABASE_URL=postgres://user:pass@localhost:5432/auth_db
-JWT_SECRET=your_super_secret_key
+DATABASE_URL=postgres://postgres:123@localhost:5432/auth_db?sslmode=disable
+JWT_SECRET=your_secret_key_here
